<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WelcomeView</class>
 <widget class="QScrollArea" name="WelcomeView">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1011</width>
    <height>803</height>
   </rect>
  </property>
  <property name="acceptDrops">
   <bool>true</bool>
  </property>
  <property name="windowTitle">
   <string>Welcome</string>
  </property>
  <property name="frameShape">
   <enum>QFrame::Shape::NoFrame</enum>
  </property>
  <property name="widgetResizable">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="scrollAreaWidgetContents">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1011</width>
     <height>803</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="layoutRoot" rowstretch="3,5,3" columnstretch="3,5,3">
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <property name="spacing">
     <number>0</number>
    </property>
    <item row="0" column="1">
     <spacer name="spacer6">
      <property name="orientation">
       <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="0">
     <spacer name="spacer4">
      <property name="orientation">
       <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="1">
     <widget class="QFrame" name="frameContent">
      <layout class="QVBoxLayout" name="layoutContent" stretch="0,1,0">
       <property name="spacing">
        <number>20</number>
       </property>
       <item>
        <widget class="QWidget" name="widgetHeader" native="true">
         <layout class="QHBoxLayout" name="layoutHeader" stretch="1,0,0,1">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <item>
           <spacer name="spacer1">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
           </spacer>
          </item>
          <item alignment="Qt::AlignmentFlag::AlignVCenter">
           <widget class="QLabel" name="labelIcon"/>
          </item>
          <item alignment="Qt::AlignmentFlag::AlignVCenter">
           <widget class="QWidget" name="widgetAbout" native="true">
            <layout class="QVBoxLayout" name="verticalAbout">
             <property name="leftMargin">
              <number>0</number>
             </property>
             <property name="topMargin">
              <number>0</number>
             </property>
             <property name="rightMargin">
              <number>0</number>
             </property>
             <property name="bottomMargin">
              <number>0</number>
             </property>
             <item>
              <widget class="QLabel" name="labelTitle"/>
             </item>
             <item>
              <widget class="QLabel" name="labelDescription"/>
             </item>
            </layout>
           </widget>
          </item>
          <item>
           <spacer name="spacer2">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <layout class="QGridLayout" name="layoutPanels" columnstretch="1,0">
         <property name="spacing">
          <number>20</number>
         </property>
         <item row="0" column="0">
          <widget class="QWidget" name="widgetRecentItems" native="true">
           <layout class="QGridLayout" name="layoutRecentItems" rowstretch="0,0,0,0" columnstretch="0,0,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
            <property name="topMargin">
             <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
            <property name="horizontalSpacing">
             <number>20</number>
            </property>
            <item row="1" column="0">
             <widget class="QPushButton" name="buttonNewFile">
              <property name="text">
               <string>New File</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
             <widget class="QPushButton" name="buttonClearRecentItems">
              <property name="toolTip">
               <string>Clear Recent Files</string>
              </property>
              <property name="icon">
               <iconset theme="edit-clear-all"/>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QLabel" name="labelRecentItems">
              <property name="text">
               <string>Recent Files</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <spacer name="spacer3">
              <property name="orientation">
               <enum>Qt::Orientation::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>0</width>
                <height>0</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="2" column="0">
             <widget class="QPushButton" name="buttonOpenFile">
              <property name="text">
               <string>Open File...</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1" rowspan="3" colspan="2">
             <widget class="QListView" name="listViewRecentItems">
              <property name="minimumSize">
               <size>
                <width>400</width>
                <height>200</height>
               </size>
              </property>
              <property name="contextMenuPolicy">
               <enum>Qt::ContextMenuPolicy::CustomContextMenu</enum>
              </property>
              <property name="editTriggers">
               <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
              </property>
              <property name="alternatingRowColors">
               <bool>true</bool>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
         <item row="0" column="1" rowspan="2">
          <widget class="QWidget" name="widgetHelp" native="true">
           <layout class="QVBoxLayout" name="layoutHelp" stretch="0,0,0,0,1">
            <property name="leftMargin">
             <number>0</number>
            </property>
            <property name="topMargin">
             <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
            <item>
             <widget class="QLabel" name="labelHelp">
              <property name="text">
               <string>Help</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
              </property>
             </widget>
            </item>
            <item>
             <widget class="KUrlLabel" name="labelHomepage">
              <property name="text">
               <string>Visit homepage</string>
              </property>
              <property name="url" stdset="0">
               <string/>
              </property>
              <property name="glowEnabled" stdset="0">
               <bool>false</bool>
              </property>
             </widget>
            </item>
            <item>
             <widget class="KUrlLabel" name="labelContribute">
              <property name="text">
               <string>Get involved</string>
              </property>
              <property name="url" stdset="0">
               <string/>
              </property>
              <property name="glowEnabled" stdset="0">
               <bool>false</bool>
              </property>
             </widget>
            </item>
            <item>
             <widget class="KUrlLabel" name="labelHandbook">
              <property name="text">
               <string>Read handbook</string>
              </property>
              <property name="url" stdset="0">
               <string/>
              </property>
              <property name="glowEnabled" stdset="0">
               <bool>false</bool>
              </property>
             </widget>
            </item>
            <item>
             <spacer name="spacer11">
              <property name="orientation">
               <enum>Qt::Orientation::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>0</width>
                <height>0</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <widget class="QWidget" name="widgetFooter" native="true">
         <layout class="QHBoxLayout" name="layoutFooter">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <item>
           <spacer name="spacer9">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxShowForNewWindow">
            <property name="text">
             <string>Show welcome page for new window</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="spacer10">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item row="1" column="2">
     <spacer name="spacer5">
      <property name="orientation">
       <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="2" column="1">
     <spacer name="spacer7">
      <property name="orientation">
       <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
     </spacer>
    </item>
   </layout>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KUrlLabel</class>
   <extends>QLabel</extends>
   <header>kurllabel.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>buttonNewFile</tabstop>
  <tabstop>buttonOpenFile</tabstop>
  <tabstop>listViewRecentItems</tabstop>
  <tabstop>buttonClearRecentItems</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
